--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "file-saver": "^2.0.5",
     "http-proxy-middleware": "^3.0.5",
