--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test": "craco test"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.6.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-alert-dialog": "^1.1.11",
@@ -51,6 +52,7 @@
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.507.0",
+    "monaco-editor": "^0.49.0",
     "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
