--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,9 @@ dist
 *token.json*
 *credentials.json*
 
+# Local auth/test credentials
+**/codex_login*
+
 # Logs and debug files
 npm-debug.log*
 yarn-debug.log*
